remove dummy picture of cities, change background-color to grey, fix spacing

--- a/luftfilterbegehren/static/css/style.css
+++ b/luftfilterbegehren/static/css/style.css
@@ -993,24 +993,24 @@ div.center > p,
 
 .city {
     position: relative;
-    width: 137.15px;
-    height: 190px;
+    width: 300px;
+    height: 300px;
     margin: 0;
     padding: 0;
     color: inherit;
     text-align: center;
     transition: width 0.3s ease;
     margin-left: 3px;
+    margin-bottom: 3px;
+    background-color: #777;
 }
 
 .city .column {
     -webkit-justify-content: flex-end;
     -ms-flex-pack: flex-end;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
     height: 100%;
-    padding-bottom: 0.5rem;
-    text-shadow: 0px 0px 2px #000;
     z-index: 10;
 }
 
